--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -11,8 +11,10 @@
     "postinstall": "prisma generate",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --watch",
-    "test-coverage": "jest --coverage"
+    "test": "vitest",
+    "test:ci": "vitest run",
+    "coverage": "vitest run --coverage",
+    "test:e2e": "playwright test"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -65,6 +67,7 @@
     "@types/react-table": "^7.7.14",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "eslint": "^8.32.0",
@@ -72,13 +75,13 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-storybook": "^0.6.11",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jsdom": "^21.1.0",
     "postcss": "^8.4.21",
     "prisma": "^4.8.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.29.2"
   },
   "prettier": {
     "trailingComma": "es5",
