--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -5,6 +5,7 @@
   "module": "module",
   "scripts": {
     "dev": "next dev",
+    "dev-pino": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -21,36 +22,38 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.8.1",
-    "@stripe/stripe-js": "^1.46.0",
-    "@trpc/client": "^9.27.4",
-    "@trpc/next": "^9.27.4",
-    "@trpc/react": "^9.27.4",
-    "@trpc/server": "^9.27.4",
+    "@prisma/client": "^4.11.0",
+    "@stripe/stripe-js": "^1.48.0",
+    "@trpc/client": "~9.27.4",
+    "@trpc/next": "~9.27.4",
+    "@trpc/react": "~9.27.4",
+    "@trpc/server": "~9.27.4",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "micro": "^9.4.1",
-    "next": "12.3.4",
-    "next-auth": "^4.18.8",
-    "npm-check-updates": "^16.6.2",
+    "next": "~12.3.4",
+    "next-auth": "^4.20.1",
+    "npm-check-updates": "^16.7.10",
+    "pino": "^8.11.0",
+    "pino-pretty": "^9.4.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-query": "^3.39.2",
+    "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "react-table": "^7.8.0",
-    "stripe": "^10.17.0",
+    "stripe": "^11.13.0",
     "superjson": "^1.12.2",
-    "yup": "^0.32.11",
-    "zod": "^3.20.2",
-    "zustand": "^4.3.2"
+    "yup": "0.32.11",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@faker-js/faker": "^7.6.0",
-    "@mermaid-js/mermaid-cli": "^9.3.0",
-    "@playwright/test": "^1.31.1",
+    "@mermaid-js/mermaid-cli": "~9.4.0",
+    "@playwright/test": "^1.31.2",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -61,26 +64,26 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/node": "^18.14.6",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/react-table": "^7.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "~8.3.0",
     "eslint": "^8.35.0",
-    "eslint-config-next": "^13.1.2",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-next": "^13.2.3",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.11",
     "jsdom": "^21.1.0",
     "postcss": "^8.4.21",
-    "prisma": "^4.8.1",
-    "tailwindcss": "^3.2.4",
+    "prisma": "^4.11.0",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "vitest": "^0.29.2"
   },
   "prettier": {
