--- a/courier-t3/.vscode/settings.json
+++ b/courier-t3/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "editor.lineNumbers": "on"
+  "editor.lineNumbers": "on",
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "tailwindCSS.emmetCompletions": true
 }
