--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -80,6 +80,8 @@
     "eslint-plugin-storybook": "^0.6.11",
     "jsdom": "^21.1.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
