--- a/courier-t3/tsconfig.json
+++ b/courier-t3/tsconfig.json
@@ -19,7 +19,8 @@
     "noUncheckedIndexedAccess": true,
     "paths": {
       "@/components/*": ["components/*"],
-      "@/utils/*": ["utils/*"]
+      "@/utils/*": ["utils/*"],
+      "@/styles/*": ["styles/*"]
     }
   },
   "include": [
