--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -34,6 +34,7 @@
     "micro": "^9.4.1",
     "next": "~12.3.4",
     "next-auth": "^4.20.1",
+    "next-pwa": "^5.6.0",
     "npm-check-updates": "^16.7.10",
     "pino": "^8.11.0",
     "pino-pretty": "^9.4.0",
