--- a/courier-t3/public/manifest.json
+++ b/courier-t3/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Courier Shipping pwa",
+  "name": "Courier Shipping",
   "short_name": "",
   "icons": [
     {
@@ -15,5 +15,6 @@
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "display": "standalone"
+  "display": "standalone",
+  "start_url": "/"
 }
