--- a/courier-t3/package.json
+++ b/courier-t3/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
+    "react-to-print": "^2.14.12",
     "stripe": "^11.13.0",
     "superjson": "^1.12.2",
     "yup": "0.32.11",
